[tool.poetry]
name = "unicornbottle-httpproxy"
version = "0.1.12"
description = ""
authors = ["Sam Joan <sam@roque-worcel.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pika = "^1.2.0"
pika-stubs = "^0.1.3"
mitmproxy = "^6.0.2"
SQLAlchemy = "^1.4.27"
psycopg2-binary = "^2.9.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.910"
sqlalchemy2-stubs = "^0.0.2-alpha.19"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
